--- a/package.json
+++ b/package.json
@@ -10,8 +10,16 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^4.12.2",
     "@astrojs/check": "^0.8.3",
+    "@astrojs/tailwind": "^5.1.0",
+    "@fontsource/lobster": "^5.0.20",
+    "@fontsource/m-plus-rounded-1c": "^5.0.13",
+    "@fontsource/saira-extra-condensed": "^5.0.20",
+    "astro": "^4.12.2",
+    "tailwindcss": "^3.4.7",
     "typescript": "^5.5.4"
+  },
+  "devDependencies": {
+    "tailwindcss-animated": "^1.1.2"
   }
 }
